Implement GUI FCAIScheduler